--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "@bem-react/classname": "^1.5.0",
-    "@types/jest": "^24.0.13",
     "@types/node": "^12.0.2",
     "@types/react": "^16.8.18",
     "@types/react-dom": "^16.8.4",
@@ -20,7 +19,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -39,6 +38,8 @@
     ]
   },
   "devDependencies": {
-    "node-sass": "^4.12.0"
+    "@types/jest": "^24.0.13",
+    "node-sass": "^4.12.0",
+    "ts-jest": "^24.0.2"
   }
 }
